--- a/gb/24/10/10/n14347634.md
+++ b/gb/24/10/10/n14347634.md
@@ -1,7 +1,7 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>【更新】米尔顿登陆佛州 逾160万户断电</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>【更新】米尔顿登陆 逾200万户断电</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/10/id14347636-2000x2000-600x400.jpg" />///image2=```diff
 - 2024年10月9日，大型飓风米尔顿已于美国东部时间晚间8:30在佛州正式登陆。图为晚间9:00的卫星照片。（美国国家飓风中心提供）
 ```
@@ -11,13 +11,37 @@
 	<p>【大纪元2024年10月10日讯】（大纪元记者陈霆综合报导）周三（10月9日）晚间，飓风米尔顿（Milton）以三级风暴的强度，正式在佛州登陆，将带来强风、大雨，以及致命的风暴潮。</p>
 <p>美国国家飓风中心表示，米尔顿于美东时间晚间8:30在佛罗里达州西耶斯达岛（Siesta Key）附近登陆，其最大持续风速为每小时120英里。</p>
 <blockquote class="twitter-tweet" data-media-max-width="560">
-<p dir="ltr" lang="en">Major Hurricane Milton has officially made landfall near Siesta Key, FL at 8:30 PM EDT.<ahref="https://t.co/aKfNZ0vOdZ">https://t.co/aKfNZ0vOdZ</a> <ahref="https://t.co/MbCkAd6lOf"></a><a href="https://d2zw89wk00y815.cloudfront.net/X4dZj2zBb"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="MbCkAd6lOf</a></p>
+<p dir="ltr" lang="en">Major Hurricane Milton has officially made landfall near Siesta Key, FL at 8:30 PM EDT.<ahref="https://t.co/aKfNZ0vOdZ">https://t.co/aKfNZ0vOdZ</a> <ahref="https://t.co/MbCkAd6lOf"></a><a href="https://d1x2hvndm8f89d.cloudfront.net/M2eZj2zBz"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="MbCkAd6lOf</a></p>
 <p>— NWS Miami (@NWSMiami) <ahref="https://twitter.com/NWSMiami/status/1844179857762287787?ref_src=twsrc%5Etfw">October 10, 2024</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a></p>
 <p>“随着米尔顿沿佛罗里达西海岸向内陆移动，危及生命的风暴潮、强风和山洪仍持续发生。”美国国家飓风中心在9点的更新中表示。</p>
 <p>这场风暴将为佛罗里达州海湾沿岸大部分地区带来致命的风暴潮，包括人口稠密的坦帕（Tampa）、圣彼得斯堡（St. Petersburg）、萨拉索塔（Sarasota）和梅尔斯堡（Fort Myers）等地。</p>
 <p>西耶斯达岛在坦帕以南约68英里，是萨拉索塔附近的一座障壁岛（barrier island），拥有白色沙滩，约有5,500名居民。</p>
 <p>米尔顿虽然没有直击坦帕，但仍可能在该地区产生致命的风暴潮和强风。以下为飓风新闻的实时更新。</p>
+<h2>停电户数激增 已逾200万人断电</h2>
+<p>据PowerOutage.us统计，佛州停电户数剧增，在大约3个小时内，停电的家庭和企业增加了一倍，达到200万户。</p>
+<p>在美东时间晚上9:30左右，仅约110万用电户断电。但目前该数字已超过202万。</p>
+<p>在风暴登陆的西耶斯达岛附近，一些县报告有超过70%的用电户断电，包括萨拉索塔县、马纳蒂县（Manatee）和皮内拉斯县（Pinellas）。佛州中部的哈迪县（Hardee）几乎完全处于黑暗中，97%的用户停电。</p>
+<p>美国国家飓风中心表示，米尔顿正以16英里/小时的速度，往东北东方向移动。预计将在佛罗里达州中部画出了一条破坏性的路径，预期停电户数将继续上升。</p>
+<h2>强风撕碎坦帕湾光芒主场的屋顶</h2>
+<p>美国职棒大联盟球队“坦帕湾光芒”（Tampa Bay Rays）的主场是“纯品康纳室内球场”（Tropicana Field）似乎因飓风而严重受损。</p>
+<p>社交平台上流传的影像显示，圆顶建筑屋顶的织物已被撕成碎片。目前尚不清楚体育场内是否有损坏。</p>
+<p>光芒队的球场没有被用作避难所，但根据《坦帕湾时报》报导，它被用作“工人的集结地”，这些工人到此，准备为风暴的破坏处理善后。</p>
+<p dir="ltr" lang="en">The view from our window as we ride out the storm. The roof of Tropicana Field is destroyed by the winds of <ahref="https://twitter.com/hashtag/HurricaneMilton?src=hash&amp;ref_src=twsrc%5Etfw">#HurricaneMilton</a>. Praying for Tampa Bay and all areas affected. Stay safe, everyone <ahref="https://t.co/uy0aNGMAuJ"></a><a href="https://d1x2hvndm8f89d.cloudfront.net/M2eZj2zBz"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="uy0aNGMAuJ</a></p>
+<p>— Dave Moore (@DaveMoore_83) <ahref="https://twitter.com/DaveMoore_83/status/1844210561896296718?ref_src=twsrc%5Etfw">October 10, 2024</a></p></blockquote>
+<h2>风势过大 坦帕市消防局停止紧急服务</h2>
+<p>美国坦帕市消防局长表示，米尔顿飓风风速超过100英里/小时，在强风中行动过于危险，将停止紧急服务，直到救难人员可安全上路为止。</p>
+<p>坦帕市消防局长芭芭拉·崔普（Barbara Tripp）告诉CNN：“我们不得不停止所有服务，因为让急救人员上路太危险了。”</p>
+<p>消防局长表示，该市至少有40万人受停电影响。</p>
+<h2>白宫：拜登已听取简报</h2>
+<p>根据白宫的一份声明，美国总统拜登（Joe Biden）在米尔顿飓风登陆后，已听取了简报。</p>
+<p>白宫表示：“拜登总统和哈里斯副总统收到了政府成员的简报，内容涉及飓风米尔顿的最新预测、对佛州的预期影响，以及正在进行的登陆前准备工作。”</p>
+<p>“拜登总统今晚将就飓风米尔顿向全国发表演说。”白宫表示。</p>
+<blockquote class="twitter-tweet" data-media-max-width="560">
+<p dir="ltr" lang="en">President Biden and Vice President Harris received a briefing today on preparations for Hurricane Milton and the ongoing response to Hurricane Helene.</p>
+<p>We urge everyone in Hurricane Milton’s path to follow all safety instructions as we head into the next 24 hours. <ahref="https://t.co/2S2nGMtGLj"></a><a href="https://d1x2hvndm8f89d.cloudfront.net/M2eZj2zBz"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="2S2nGMtGLj</a></p>
+<p>— The White House (@WhiteHouse) <ahref="https://twitter.com/WhiteHouse/status/1844154629036159229?ref_src=twsrc%5Etfw">October 9, 2024</a></p></blockquote>
+<p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a></p>
 <h2>佛州马丁县报告多人受伤 数十栋房屋受损</h2>
 <p>佛罗里达州马丁县（Martin County）官员表示，当地已有多人受伤，数十栋房屋受损。</p>
 <p>马丁县消防救援队 (Martin County Fire Rescue) 周三晚间在X上发布消息称，一些民宅已遭到“严重”破坏，并传出人员受到轻重伤的报告，所幸尚未有人丧生。</p>
@@ -44,14 +68,14 @@
 <p>拜登总统周二表示，密尔顿可能是佛罗里达州一百多年来最严重的风暴。</p>
 <p>责任编辑：李沐恩</p>
 	
-
+<hr>
 <strong>相关新闻：</strong>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347633.md#1">贺锦丽未能说明与拜登政策的差异 川普回应</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347702.md#1">20英里限速法在布碌崙开始实行 华埠坚尼路紧跟</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347672.md#1">纽约市府拨款4800万 扩大低收入社区更换铅管计划</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347688.md#1">纽约市警局五分局推在线报警系统 四类案件可在线提交</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347667.md#1">王后区社区忧罗斯福大道成犯罪温床 吁纽约州长派100州警</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/28/n10749135.md#1" target="_blank">林辉：邓小平女儿指北大曾变成法西斯集中营</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/23/n10871477.md#1" target="_blank">感恩节 来自西方人的最美好心愿</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/15/n10058256.md#1" target="_blank">林辉：老百姓恨日本人也恨八路军的背后</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/7/n10284039.md#1" target="_blank">中国良心教师们的故事（1）</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
@@ -74,5 +98,6 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145199.md#1">长者自救锻炼法 逆转骨质疏松</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346769.md#1">秋季宜多吃“白色”食物 按三阴交穴保健</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346351.md#1">想了解空服员吗？ 先看这个工作的优缺点比较</a></li>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/10/10/n14347634.htm">【更新】米尔顿登陆佛州 逾160万户断电</a></p><hr>
+<hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/10/10/n14347634.htm">【更新】米尔顿登陆 逾200万户断电</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347634.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
